[package]
authors = ["Michael Lodder <redmike7@gmail.com>"]
categories = ["cryptography", "encryption"]
description = """The Paillier cryptosystem is a public key crytosystem based on composite degree residuosity classes.
Paillier ciphertexts are homorphic in that the can be added.
"""
documentation = "https://docs.rs/paillier-rs"
edition = "2018"
license = "Apache-2.0"
name = "libpaillier"
readme = "README.md"
repository = "https://github.com/mikelodder7/paillier-rs"
version = "0.1.0"

[features]
default = ["gmp"]
gmp = ["unknown_order/gmp"]
openssl = ["unknown_order/openssl"]
rust = ["unknown_order/rust"]

[dependencies]
digest = "0.9"
rand = "0.8"
serde = { version = "1.0", features = ["serde_derive"] }
serde_bare = "0.4"
unknown_order = { version = "0.1", default-features = false }
zeroize = { version = "1.3", features = ["zeroize_derive"] }

[dev-dependencies]
elliptic-curve = "0.9"
hex = "0.4"
k256 = { version = "0.8", features = ["arithmetic", "zeroize"] }
multibase = "0.9"
sha2 = "0.9"
serde_json = "1.0"
unicase = "2.6"