[package]
authors = ["Michael Lodder <redmike7@gmail.com>"]
categories = ["cryptography", "algorithms"]
description = """The Paillier cryptosystem is a public key crytosystem based on composite degree residuosity classes.
Paillier ciphertexts are homorphic in that the can be added.
"""
documentation = "https://docs.rs/paillier-rs"
edition = "2021"
license = "Apache-2.0"
name = "libpaillier"
readme = "README.md"
repository = "https://github.com/mikelodder7/paillier-rs"
version = "0.7.0"

[features]
default = ["crypto"]
crypto = ["unknown_order/crypto"]
gmp = ["unknown_order/gmp"]
openssl = ["unknown_order/openssl"]
rust = ["unknown_order/rust"]
wasm = ["getrandom", "rand", "wasm-bindgen", "serde-wasm-bindgen"]

[dependencies]
digest = "0.10"
getrandom = { version = "0.2", features = ["js"], optional = true }
rand = { version = "0.8", optional = true }
postcard = { version = "1.0.9", features = ["use-std"] }
serde = { version = "1.0", features = ["serde_derive"] }
serde-wasm-bindgen = { version = "0.6", optional = true }
thiserror = "1.0"
unknown_order = { version = "0.10", default-features = false  }
wasm-bindgen = { version = "0.2", default-features = false, features = ["serde-serialize"], optional = true }
zeroize = { version = "1.8", features = ["zeroize_derive"] }

[dev-dependencies]
elliptic-curve = "0.13"
hex = "0.4"
k256 = { version = "0.13", features = ["arithmetic"] }
wasm-bindgen-test = "0.3"
rand = "0.8"
multibase = "0.9"
sha2 = "0.10"
serde_json = "1.0"
unicase = "2.6"
